--- a/demo.ipynb
+++ b/demo.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# WholeSlideImageSampler\n",
+    "# WholeSlideImageSampler demo\n",
     "\n",
     "This respository aims to develop a tool for sampling from Whole-Slide-Images (WSIs) in an efficient manner. By sampling we mean producing batches of patches which can then be fed to e.g. machine learning algorithms. This should ideally be achieved without storing all the patches on disk (waste of storage). It aims to work with all WSIs that can be read by [openslide](https://github.com/openslide/openslide-python). Sample data is available [here](https://www.dropbox.com/sh/hk676r960zxbqcb/AADrnhTuKRH296GTFwdqWKxca?dl=0).\n",
     "\n",
     "## Assumptions\n",
     "\n",
     "- You have WSIs in a format readable by openslide.\n",
-    "- You may also have multi-resolution-image annotation files, such as those exportable by the (excellent) slide annotation tool [ASAP](https://github.com/computationalpathologygroup/ASAP) (which supports all openslide readable images). For example, see the folder 'annotation' in the sample data. The annotations can be multi-class."
+    "- You may also have multi-resolution-image annotation files, such as those exportable by the slide annotation tool [ASAP](https://github.com/computationalpathologygroup/ASAP) (which supports all openslide readable images). For example, see the folder 'annotation' in the sample data. The annotations can be multi-class."
    ]
   },
   {
@@ -20,21 +20,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modules.openslideplus import OpenSlidePlus\n",
-    "from modules.annotation import Annotation\n",
-    "from modules.tissuemask import TissueMask\n",
-    "import modules.misc as ut\n",
+    "from wsisampler import OpenSlidePlus\n",
+    "from wsisampler.annotation import Annotation\n",
+    "from wsisampler.tissuemask import TissueMask\n",
+    "from wsisampler.misc import save_patchframe_patches\n",
     "\n",
-    "from sampler import Sampler\n",
+    "from wsisampler import Sampler\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import glob\n",
     "import os\n",
-    "%matplotlib inline\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%matplotlib inline"
    ]
   },
   {
@@ -111,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# And the generated tissue mask"
+    "# View the generated tissue mask"
    ]
   },
   {
@@ -123,7 +120,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tissue mask found. Loading.\n"
+      "Tissue mask not found. Generating now.\n",
+      "Pickling TissueMask to ./tissue_masks/Tumor_108_TissueMask.pickle\n"
      ]
     },
     {
@@ -244,7 +242,7 @@
     }
    ],
    "source": [
-    "ut.save_patchframe_patches(patchframe, './patches') # look in this directory"
+    "save_patchframe_patches(patchframe, './patches') # look in this directory"
    ]
   },
   {
