--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# WholeSlideImageSampler demo\n",
     "\n",
-    "This respository aims to develop a tool for sampling from Whole-Slide-Images (WSIs) in an efficient manner. By sampling we mean producing batches of patches which can then be fed to e.g. machine learning algorithms. This should ideally be achieved without storing all the patches on disk (waste of storage). It aims to work with all WSIs that can be read by [openslide](https://github.com/openslide/openslide-python). Sample data is available [here](https://www.dropbox.com/sh/hk676r960zxbqcb/AADrnhTuKRH296GTFwdqWKxca?dl=0).\n",
+    "This respository aims to develop a tool for sampling from Whole-Slide-Images (WSIs) in an efficient manner. By sampling we mean producing batches of patches which can then be fed to e.g. machine learning algorithms. This should ideally be achieved without storing all the patches on disk (waste of storage). It aims to work with all WSIs that can be read by [openslide](https://github.com/openslide/openslide-python). Sample data is available [here](https://drive.google.com/open?id=11-4J16pjfGbluNZFUyvxp2VWTNn80AzX).\n",
     "\n",
     "## Assumptions\n",
     "\n",
