--- a/demo.ipynb
+++ b/demo.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,15 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tissue mask not found. Generating now.\n",
-      "Pickling TissueMask to /home/jevjev/Dropbox/Projects/ImageSampler/Peters/WholeSlideImageSampler/test_data/tissue_masks/openslide_example_TissueMask.pickle\n"
+      "Tissue mask found. Loading.\n"
      ]
     },
     {
@@ -158,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -246,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,15 +263,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rejected 356 patches for file openslide_example\n",
-      "Saving patchframe to /home/jevjev/Dropbox/Projects/ImageSampler/Peters/WholeSlideImageSampler/openslide_example_patchframe.pickle\n"
+      "Rejected 35 patches for file openslide_example\n",
+      "Saving patchframe to /home/jevjev/Dropbox/Projects/ImageSampler/Peters/WholeSlideImageSampler/test_data/openslide_example_patchframe.pickle\n"
      ]
     }
    ],
@@ -320,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -386,15 +385,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tissue mask not found. Generating now.\n",
-      "Pickling TissueMask to /home/jevjev/Dropbox/Projects/ImageSampler/Peters/WholeSlideImageSampler/test_data/tissue_masks/jp_example_TissueMask.pickle\n"
+      "Tissue mask found. Loading.\n"
      ]
     },
     {
@@ -425,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
